--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 <title>Socials - FifthSplit.com</title>
 </head>
 <body>
@@ -23,6 +27,6 @@
 <a href="https://github.com/" class="links">GitHub</a>
 <a href="http://iracing.fifthsplit.com" class="links">iRacing Referral</a>
 	
-<div class="bottom-text">FifthSplit, 2015-2022. v1.0.</div>
+<div class="bottom-text">FifthSplit, 2015-2022. v1.1.</div>
 </body>
 </html>
