--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
+	 <style>
+body {
+  background-image: url('site-background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style> 
 <title>Socials - FifthSplit.com</title>
 </head>
 <body>
@@ -27,6 +35,6 @@
 <a href="https://github.com/" class="links">GitHub</a>
 <a href="http://iracing.fifthsplit.com" class="links">iRacing Referral</a>
 	
-<div class="bottom-text">FifthSplit, 2015-2022. v1.1.</div>
+<div class="bottom-text">FifthSplit, 2015-2022. v1.2.</div>
 </body>
 </html>
