--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@ body {
 <a href="https://twitter.com/thefifthsplit" class="links">Twitter</a>
 <a href="https://www.youtube.com/channel/UC7aEcmXvNx32BEU0xSY4tkQ" class="links">YouTube</a>
 <a href="https://twitch.tv/danielcatton" class="links">Twitch</a>
+<a href="https://https://steamcommunity.com/id/fifthsplit/" class="links">Steam</a>
 <a href="https://github.com/" class="links">GitHub</a>
 <a href="http://iracing.fifthsplit.com" class="links">iRacing Referral</a>
 	
-<div class="bottom-text">FifthSplit, 2015-2022. v1.2.</div>
+<div class="bottom-text">FifthSplit, 2015-2022. v1.3.</div>
 </body>
 </html>
