--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@ body {
 <a href="https://www.youtube.com/channel/UC7aEcmXvNx32BEU0xSY4tkQ" class="links">YouTube</a>
 <a href="https://twitch.tv/danielcatton" class="links">Twitch</a>
 <a href="https://steamcommunity.com/id/fifthsplit/" class="links">Steam</a>
-<a href="https://github.com/" class="links">GitHub</a>
+<a href="https://music.apple.com/gb/profile/danielcatton" class="links">Apple Music</a>
+<a href="https://github.com/danielcatton" class="links">GitHub</a>
 <a href="http://iracing.fifthsplit.com" class="links">iRacing Referral</a>
 	
-<div class="bottom-text">FifthSplit, 2015-2022. v1.4.</div>
+<div class="bottom-text">FifthSplit, 2015-2022. v1.4.1</div>
 </body>
 </html>
