--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body {
 
 <div class="profile-name">@FifthSplit</div>
 
+<a href="https://team.fifthsplit.com" class="links">Team FifthSplit</a>
 <a href="https://www.instagram.com/fifthsplit" class="links">FifthSplit Instagram</a>
 <a href="https://www.instagram.com/danielcatton_" class="links">Personal Instagram</a>
 <a href="https://twitter.com/thefifthsplit" class="links">Twitter</a>
@@ -37,6 +38,6 @@ body {
 <a href="https://github.com/danielcatton" class="links">GitHub</a>
 <a href="http://iracing.fifthsplit.com" class="links">iRacing Referral</a>
 	
-<div class="bottom-text">FifthSplit, 2015-2022. v1.4.1</div>
+<div class="bottom-text">FifthSplit, 2015-2022. v1.4.2</div>
 </body>
 </html>
