added schedule link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>hi :)</h1>
+    <h1>hi :)</h1> <br>
+    <a href="https://www.fifthsplit.com/schedule">Click here to view this weeks schedule!</a>
   </body>
 </html>
