--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     <h1>hi :)</h1> <br>
-    <a href="https://www.fifthsplit.com/schedule">Click here to view this weeks schedule!</a>
+    <a href="https://www.fifthsplit.com/schedule.pdf">Click here to view this weeks schedule!</a>
   </body>
 </html>
