--- a/links.html
+++ b/links.html
@@ -27,16 +27,15 @@ body {
 
 <div class="profile-name">@FifthSplit</div>
 
-<a href="https://team.fifthsplit.com" class="links">Team FifthSplit</a>
 <a href="https://www.instagram.com/fifthsplit" class="links">FifthSplit Instagram</a>
 <a href="https://www.instagram.com/danielcatton_" class="links">Personal Instagram</a>
 <a href="https://twitter.com/thefifthsplit" class="links">Twitter</a>
 <a href="https://www.youtube.com/channel/UC7aEcmXvNx32BEU0xSY4tkQ" class="links">YouTube</a>
 <a href="https://twitch.tv/danielcatton" class="links">Twitch</a>
 <a href="https://steamcommunity.com/id/fifthsplit/" class="links">Steam</a>
-<a href="https://music.apple.com/gb/profile/danielcatton" class="links">Apple Music</a>
+<a href="https://beta.music.apple.com/gb/profile/danielcatton" class="links">Apple Music</a>
 <a href="https://github.com/danielcatton" class="links">GitHub</a>
-<a href="http://iracing.fifthsplit.com" class="links">iRacing Referral</a>
+<a href="https://www.iracing.com/membership/?refid=493870" class="links">iRacing Referral</a>
 	
 <div class="bottom-text">FifthSplit, 2015-2022. v1.4.2</div>
 </body>
