--- a/404.html
+++ b/404.html
@@ -22,4 +22,4 @@ body {
 <title>Oops, it's a 404! - FifthSplit.com</title>
 </head>
 <h1>Error 404</h1> <br>
-<h3>I've completely bottled this one. Come back later!</h3>
+<h3>I've completely bottled this one, there isn't anything here. <br> Come back later! <br> :)</h3>
