--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <div class="header">
+    <a href="#default" class="logo">FifthSplit.com</a>
+    <div class="header-right">
+      <a class="active" href="#home">Home</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
+  </div>
   <body>
     <h1>hi :)</h1> <br>
     <a href="https://www.fifthsplit.com/schedule.pdf">Click here to view this weeks schedule!</a>
