--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="manifest" href="/site.webmanifest">
 	 <style>
 body {
-  background-image: url('404-background.jpg');
+  background-image: url('index-background.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
