new index + css

--- a/index.html
+++ b/index.html
@@ -12,14 +12,60 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 	 <style>
-body {
-  background-image: url('index-background.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-</style> 
-<title>Home - FifthSplit.com</title>
-</head>
-<h1>Hi!</h1> <br>
-<h3>There isn't anything here yet. <br> Check back later! <br> :)</h3>
+<body>
+  <div class="gradient"></div>
+  <table class="vcenter" border="0"></table>
+    <tbody>
+      <tr>
+        <td>
+          <img class="logo" src="assets/logo.png" alt="DCR">
+        <br>
+        <div class="widthLimiter">
+          <a href="https://www.youtube.com/channel/UC7aEcmXvNx32BEU0xSY4tkQ">
+            <div class="treeElement">
+              <img class="treeImage" src="assets/ytLogo.png">
+              YouTube
+              </div>
+            </a>
+            <a href="https://twitter.com/dcrracing_">
+              <div class="treeElement">
+                <img class="treeImage" src="assets/twitterLogo.png">
+                Twitter
+                </div>
+              </a>
+              <a href="https://www.instagram.com/danielcattonracing/">
+                <div class="treeElement">
+                  <img class="treeImage" src="assets/instaLogo.png">
+                  Instagram
+                  </div>
+                </a>
+                <a href="https://twitch.tv/danielcatton">
+            <div class="treeElement">
+              <img class="treeImage" src="assets/twitchLogo.png">
+              Twitch
+              </div>
+            </a>
+            <a href="https://steamcommunity.com/id/fifthsplit">
+            <div class="treeElement">
+              <img class="treeImage" src="assets/steamLogo.png">
+              Steam
+              </div>
+            </a>
+            <a href="https://www.iracing.com/membership/?refid=493870">
+            <div class="treeElement">
+              <img class="treeImage" src="assets/iracingLogo.png">
+              iRacing Referral
+              </div>
+            </a>
+            <a href="https://github.com/danielcatton/">
+            <div class="treeElement">
+              <img class="treeImage" src="assets/githubLogo.png">
+              GitHub
+              </div>
+            </a>
+          </div>
+          </td>
+        </tr>
+        </tbody>
+        </body>
+        </html>
