--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="gradient"></div>
-  <table class="vcenter" border="0"></table>
+  <table class="vcenter" border="0">
     <tbody>
       <tr>
         <td>
@@ -62,6 +62,7 @@
               GitHub
               </div>
             </a>
+          </table>
           </div>
           </td>
         </tr>
