--- a/index.html
+++ b/index.html
@@ -70,4 +70,7 @@
         </tr>
         </tbody>
         </body>
+        <footer>
+          <p>2015-2022 FifthSplit.com | v1.2</p>
+        </footer>
         </html>
