added spotify link to index

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <tbody>
       <tr>
         <td>
-          <img class="logo" src="assets/logo.png" alt="DCR">
+          <img class="logo" src="assets/logo.png" alt="dcrLogo">
           <div class="widthLimiter">
-          <a href="https://www.youtube.com/channel/UC7aEcmXvNx32BEU0xSY4tkQ">
+          <a href="https://www.youtube.com/@FifthSplit">
             <div class="treeElement">
               <img class="treeImage" src="assets/ytLogo.png">
               YouTube
@@ -64,6 +64,12 @@
               GitHub
               </div>
             </a>
+            <a href="https://open.spotify.com/user/mc5w2sv1g7fgwi23mgebcl803">
+              <div class="treeElement">
+                <img class="treeImage" src="assets/spotifyLogo.png">
+                Spotify
+                </div>
+              </a>
           </table>
           </div>
           </td>
