replaced spotify with stats.fm

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               GitHub
               </div>
             </a>
-            <a href="https://open.spotify.com/user/mc5w2sv1g7fgwi23mgebcl803">
+            <a href="https://stats.fm/danielcatton/">
               <div class="treeElement">
                 <img class="treeImage" src="assets/spotifyLogo.png">
                 Spotify
