--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
                 Spotify
                 </div>
               </a>
+		  <a rel="me" href="https://social.vivaldi.net/@FifthSplit">
+			  <div class="treeElement">
+				  <img class="treeImage" src="assets/mastodonLogo.png">
+			  Mastodon
+				  </a>
+			  </div>
           </table>
           </div>
           </td>
