--- a/newSite/index.html
+++ b/newSite/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="/newSite/images/newFSlogo.png" alt="FifthSplit Logo">
+            <img class="logo" src="/newSite/images/newFSlogo.svg" alt="FifthSplit Logo">
             <nav>
                 <ul class="nav__links" >
                     <li><a href="home.html">Home</a></li>
