--- a/newSite/index.html
+++ b/newSite/index.html
@@ -14,9 +14,7 @@
             <img class="logo" src="/newSite/images/newFSlogo.svg" alt="FifthSplit Logo">
             <nav>
                 <ul class="nav__links" >
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="socials.html">Socials</a></li>
+                    <li><a href="home.html">Home</a></li><li><a href="projects.html">Projects</a></li><li><a href="socials.html">Socials</a></li>
                 </ul>
             </nav>
             <a class="cta" href="#"><button>Contact</button></a>
