--- a/newSite/index.html
+++ b/newSite/index.html
@@ -14,7 +14,7 @@
             <img class="logo" src="/newSite/images/newFSlogo.svg" alt="FifthSplit Logo">
             <nav>
                 <ul class="nav__links" >
-                    <li><a href="home.html">Home</a></li><li><a href="projects.html">Projects</a></li><li><a href="socials.html">Socials</a></li>
+                    <li><a href="index.html">Home</a></li><li><a href="search.html">Search</a></li><li><a href="gallery.html">Gallery</a></li><li><a href="about.html">About</a></li><li><a href="popular.html">Popular</a></li><li><a href="social.html">Social</a></li>
                 </ul>
             </nav>
             <a class="cta" href="#"><button>Contact</button></a>
