--- a/newSite/index.html
+++ b/newSite/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home - FifthSplit.com</title>
+        <title>Home - Festival Information Specialist</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/newSite/styles/styles.css">
