--- a/newSite/index.html
+++ b/newSite/index.html
@@ -20,4 +20,8 @@
             <a class="cta" href="#"><button>Contact</button></a>
         </header>
     </body>
+    <body>
+        <h1>Home</h1>
+        <p>Welcome to Festival Information Specialist, the go-to location to search for festivals in your region. This site allows you to search by county, as well as more in depth filters based around the type of festival, as well as more specific locations.</p>
+    </body>
 </html>
