--- a/newSite/index.html
+++ b/newSite/index.html
@@ -14,7 +14,7 @@
             <img class="logo" src="/newSite/images/festifspec.png" alt="Festival Information Specialist Logo">
             <nav>
                 <ul class="nav__links" >
-                    <li><a href="index.html">Home</a></li><li><a href="search.html">Search</a></li><li><a href="photo-gallery.html">Photo Gallery</a></li><li><a href="about-us.html">About US</a></li><li><a href="popular.html">Popular</a></li><li><a href="social.html">Social</a></li>
+                    <li><a href="index.html">Home</a></li><li><a href="search.html">Search</a></li><li><a href="photo-gallery.html">Photo Gallery</a></li><li><a href="about-us.html">About Us</a></li><li><a href="popular.html">Popular</a></li><li><a href="social.html">Social</a></li>
                 </ul>
             </nav>
             <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
