--- a/newSite/index.html
+++ b/newSite/index.html
@@ -9,17 +9,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/newSite/styles/styles.css">
     </head>
-    <header>
-        <img class="logo" src="/newSite/images/festifspec.png" alt="Festival Information Specialist Logo">
-        <nav>
-            <ul class="nav__links" >
-                <li><a href="index.html">Home</a></li><li><a href="search.html">Search</a></li><li><a href="photo-gallery.html">Photo Gallery</a></li><li><a href="about-us.html">About Us</a></li><li><a href="popular.html">Popular</a></li><li><a href="social.html">Social</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
-    </header>
     <body>
+        <header>
+            <img class="logo" src="/newSite/images/festifspec.png" alt="Festival Information Specialist Logo">
+            <nav>
+                <ul class="nav__links" >
+                    <li><a href="index.html">Home</a></li><li><a href="search.html">Search</a></li><li><a href="photo-gallery.html">Photo Gallery</a></li><li><a href="about-us.html">About Us</a></li><li><a href="popular.html">Popular</a></li><li><a href="social.html">Social</a></li>
+                </ul>
+            </nav>
+            <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
+        </header>
+        <main>
         <h1>Home</h1>
         <p>Welcome to Festival Information Specialist, the go-to location to search for festivals in your region. This site allows you to search by county, as well as more in depth filters based around the type of festival, as well as more specific locations.</p>
+        </main>
     </body>
 </html>
