--- a/404.html
+++ b/404.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#000000" />
-<link rel="stylesheet" href="styles/index.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">  
-	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-	 <style>
-body {
-  background-image: url('assets/404-background.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-</style> 
-<title>Oops, it's a 404! - FifthSplit.com</title>
-</head>
-<h1>Error 404</h1> <br>
-<h3>There isn't anything here. <br> Check back later! <br> :)</h3>
+
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Error 404 - Festival Information Specialist</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/newSite/styles/styles.css">
+    </head>
+    <body>
+        <header>
+            <img class="logo" src="/newSite/images/festifspec.png" alt="Festival Information Specialist Logo">
+            <nav>
+                <ul class="nav__links" >
+                    <li><a href="index.html">Home</a></li><li><a href="search.html">Search</a></li><li><a href="photo-gallery.html">Photo Gallery</a></li><li><a href="about-us.html">About Us</a></li><li><a href="popular.html">Popular</a></li><li><a href="social.html">Social</a></li>
+                </ul>
+            </nav>
+            <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
+        </header>
+        <main>
+        <h1>Error 404</h1>
+        <p>You've reached a page that doesn't exist! Try the links in the header above, or use the contact us button if you have any issues.</p>
+        </main>
+    </body>
+</html>
