--- a/newSite/index.html
+++ b/newSite/index.html
@@ -25,5 +25,8 @@
         <a class="cta" href="search.html"><button>Search for your next festival!</button></a><br>
         <br><p>Sample Text</p>
         </main>
+        <footer>
+            
+        </footer>
     </body>
 </html>
