--- a/newSite/index.html
+++ b/newSite/index.html
@@ -10,7 +10,9 @@
         <link rel="stylesheet" href="/newSite/styles/styles.css">
     </head>
     <body>
-        <header>
+        <div id="page-container">
+            <div id="content-wrap">
+            <header>
             <img class="logo" src="/newSite/images/festifspec.png" alt="Festival Information Specialist Logo">
             <nav>
                 <ul class="nav__links" >
@@ -25,8 +27,10 @@
         <a class="cta" href="search.html"><button>Search for your next festival!</button></a><br>
         <br><p>Sample Text</p>
         </main>
-        <footer>
-            
+        </div>
+        <footer id="footer">
+            <a href="#">temp</a>
         </footer>
+        </div>
     </body>
 </html>
