--- a/newSite/index.html
+++ b/newSite/index.html
@@ -25,7 +25,7 @@
         <h1>Home</h1>
         <p>Welcome to Festival Information Specialist, the go-to location to search for festivals in your region. This site allows you to search by county, as well as more in depth filters based around the type of festival, as well as more specific locations. We also host a variety of other pages that allow our users to view various photos of previous festivals, learn more about what we do, view our social media pages, as well as view the popular festivals in the user's region.</p><br>
         <a class="cta" href="search.html"><button>Search for your next festival!</button></a><br>
-        <br><p>The festivals shown below have all had attendees originate from out site!</p><br>
+        <br><p>The festivals shown below have all had attendees originate from our site!</p><br>
         <img src="/newSite/images/fest1.png" alt="Image of a festival" width="400" height="200">
         </main>
         </div>
