--- a/newSite/index.html
+++ b/newSite/index.html
@@ -27,6 +27,9 @@
         <a class="cta" href="search.html"><button>Search for your next festival!</button></a><br>
         <br><p>The festivals shown below have all had attendees originate from our site!</p><br>
         <img src="/newSite/images/fest1.png" alt="Image of a festival" width="400" height="200">
+        <img src="/newSite/images/fest2.png" alt="Image of a festival" width="400" height="200">
+        <img src="/newSite/images/fest3.png" alt="Image of a festival" width="400" height="200">
+        <img src="/newSite/images/fest4.png" alt="Image of a festival" width="400" height="200">
         </main>
         </div>
         <footer id="footer">
