--- a/festival-information-specialist/index.html
+++ b/festival-information-specialist/index.html
@@ -7,13 +7,13 @@
         <title>Home - Festival Information Specialist</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/newSite/styles/styles.css">
+        <link rel="stylesheet" href="/festival-information-specialist/styles/styles.css">
     </head>
     <body>
         <div id="page-container">
             <div id="content-wrap">
             <header>
-            <img class="logo" src="/newSite/images/festifspec.png" alt="Festival Information Specialist Logo">
+            <img class="logo" src="/festival-information-specialist/images/festifspec.png" alt="Festival Information Specialist Logo">
             <nav>
                 <ul class="nav__links" >
                     <li><a href="index.html">Home</a></li><li><a href="search.html">Search</a></li><li><a href="photo-gallery.html">Photo Gallery</a></li><li><a href="about-us.html">About Us</a></li><li><a href="popular.html">Popular</a></li><li><a href="social.html">Social</a></li>
@@ -26,10 +26,10 @@
         <p>Welcome to Festival Information Specialist, the go-to location to search for festivals in your region. This site allows you to search by county, as well as more in depth filters based around the type of festival, as well as more specific locations. We also host a variety of other pages that allow our users to view various photos of previous festivals, learn more about what we do, view our social media pages, as well as view the popular festivals in the user's region.</p><br>
         <a class="cta" href="search.html"><button>Search for your next festival!</button></a><br>
         <br><p>The festivals shown below have all had attendees originate from our site!</p><br>
-        <img src="/newSite/images/fest1.png" alt="Image of a festival" width="400" height="200">
-        <img src="/newSite/images/fest2.png" alt="Image of a festival" width="400" height="200">
-        <img src="/newSite/images/fest3.png" alt="Image of a festival" width="400" height="200">
-        <img src="/newSite/images/fest4.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest1.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest2.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest3.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest4.png" alt="Image of a festival" width="400" height="200">
         </main>
         </div>
         <footer id="footer">
