--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
         <title>Error 404 - Festival Information Specialist</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/newSite/styles/styles.css">
+        <link rel="stylesheet" href="/festival-information-specialist/styles/styles.css">
     </head>
     <body>
         <header>
-            <img class="logo" src="/newSite/images/festifspec.png" alt="Festival Information Specialist Logo">
+            <img class="logo" src="/festival-information-specialist/images/festifspec.png" alt="Festival Information Specialist Logo">
             <nav>
                 <ul class="nav__links" >
                     <li><a href="index.html">Home</a></li><li><a href="search.html">Search</a></li><li><a href="photo-gallery.html">Photo Gallery</a></li><li><a href="about-us.html">About Us</a></li><li><a href="popular.html">Popular</a></li><li><a href="social.html">Social</a></li>
