--- a/festival-information-specialist/photo-gallery.html
+++ b/festival-information-specialist/photo-gallery.html
@@ -39,6 +39,14 @@
         <img src="/festival-information-specialist/images/fest2.png" alt="Image of a festival" width="400" height="200">
         <img src="/festival-information-specialist/images/fest3.png" alt="Image of a festival" width="400" height="200">
         <img src="/festival-information-specialist/images/fest4.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest1.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest2.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest3.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest4.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest1.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest2.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest3.png" alt="Image of a festival" width="400" height="200">
+        <img src="/festival-information-specialist/images/fest4.png" alt="Image of a festival" width="400" height="200">
         </main>
         </div>
         <footer id="footer">
