--- a/festival-information-specialist/index.html
+++ b/festival-information-specialist/index.html
@@ -33,7 +33,7 @@
         </main>
         </div>
         <footer id="footer">
-            <a href="#">temp</a>
+            <a style="font-style: italic;" href="#">Festival Information Specialist</a>
         </footer>
         </div>
     </body>
