--- a/festival-information-specialist/popular.html
+++ b/festival-information-specialist/popular.html
@@ -22,7 +22,7 @@
             <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
         </header>
         <main>
-        <h1>Popular in your area</h1><br>
+        <h1>Popular in Your Area</h1><br>
         <p>These are the festivals with the highest level of popularity in your area</p><br><br>
         <table>
             <tr>
